src/objects/Apttus__APTS_Related_Agreement__c.object
<CustomObject>
    <description>To identify the different types of relationships between agreements</description>
    <fields>
        <fullName>Apttus__APTS_Contract_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship From</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>R00N50000001Xl0WEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__APTS_Contract_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship To</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>R00N50000001Xl0KEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Relationship_From_Type__c</fullName>
        <label>Relationship From Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Related NDA Is</fullName>
                </value>
                <value>
                    <fullName>Is NDA For</fullName>
                </value>
                <value>
                    <fullName>Is Master Of</fullName>
                </value>
                <value>
                    <fullName>Is Child Of</fullName>
                </value>
                <value>
                    <fullName>Is Related Contract</fullName>
                </value>
                <value>
                    <fullName>Is SOW Of</fullName>
                </value>
                <value>
                    <fullName>Is Amendment For</fullName>
                </value>
                <value>
                    <fullName>Is Amended By</fullName>
                </value>
                <value>
                    <fullName>Is Superceded By</fullName>
                </value>
                <value>
                    <fullName>Is Renewed By</fullName>
                </value>
                <value>
                    <fullName>Is Renewal For</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Relationship_To_Type__c</fullName>
        <label>Relationship To Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Related NDA Is</fullName>
                </value>
                <value>
                    <fullName>Is NDA For</fullName>
                </value>
                <value>
                    <fullName>Is Master Of</fullName>
                </value>
                <value>
                    <fullName>Is Child Of</fullName>
                </value>
                <value>
                    <fullName>Is Related Contract</fullName>
                </value>
                <value>
                    <fullName>Is SOW Of</fullName>
                </value>
                <value>
                    <fullName>Is Amendment For</fullName>
                </value>
                <value>
                    <fullName>Is Amended By</fullName>
                </value>
                <value>
                    <fullName>Is Superceded By</fullName>
                </value>
                <value>
                    <fullName>Is Renewal For</fullName>
                </value>
                <value>
                    <fullName>Is Renewal By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Agreement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>